# Tidal-Engine

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  TUNNEL_SETUP.md  message(4).txt  message(5).txt  test_network.cpp  vcpkg.json
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/: rotating-cube-demo.md
.devcontainer/: devcontainer.json
assets/: texture.cpp
assets/texturepacks/default/: pack.json
docs/: ARCHITECTURE.md  Doxyfile.in  README.md  api-reference.html  architecture.html  build-system.html  debugging.html  index.html  input-system.html  nav.js  networking.html  performance.html  quick-start.html  rendering.html  shaders.html  styles.css  threading.html  vulkan-infrastructure.html  world-system.html
docs/assets/: nav.js  styles.css
docs/development/: architecture.html  debugging.html  performance.html
docs/getting-started/: build-system.html  quick-start.html
docs/technical/: input-system.html  networking.html  rendering.html  shaders.html  threading.html  vulkan-infrastructure.html  world-system.html
include/: Application.h  Camera.h  Chunk.h  ChunkManager.h  GameClient.h  GameServer.h  NetworkManager.h  NetworkProtocol.h  SaveSystem.h  TextureManager.h  VulkanBuffer.h  VulkanDevice.h  VulkanRenderer.h
include/client/: BlockOutlineRenderer.hpp  Camera.hpp  ChunkMesh.hpp  ChunkRenderer.hpp  Console.hpp  CreativeMenu.hpp  DebugOverlay.hpp  HotbarUI.hpp  InputManager.hpp  Inventory.hpp  ItemRegistry.hpp  NetworkClient.hpp  PlayerCubeRenderer.hpp  Raycaster.hpp  TextureAtlas.hpp  VulkanEngine.hpp  VulkanRenderer.hpp
include/core/: Camera.h  CrashHandler.hpp  EngineConfig.hpp  InputManager.hpp  Logger.hpp  PerformanceMetrics.hpp  ResourceManager.hpp  ThreadPool.h
include/game/: Chunk.h  ChunkManager.h  ClientChunk.h  ClientChunkManager.h  GameClient.h  GameClientInput.h  GameClientNetwork.h  GameClientRenderer.h  GameClientUI.h  GameServer.h  SaveSystem.h
include/graphics/: TextureManager.h
include/network/: NetworkManager.h  NetworkProtocol.h
include/server/: GameServer.hpp  World.hpp
include/shared/: Block.hpp  Chunk.hpp  ChunkCoord.hpp  ChunkSerializer.hpp  Item.hpp  Protocol.hpp
include/system/: UserDataManager.h
include/vulkan/: CubeGeometry.hpp  Vertex.hpp  VulkanBuffer.h  VulkanBuffer.hpp  VulkanDevice.h  VulkanEngine.hpp  VulkanPipeline.hpp  VulkanRenderer.h  VulkanRenderer.hpp  VulkanSwapchain.hpp
infrastructure/: README.md  crash_example.cpp  logging_example.cpp
shaders/: compile.sh  cube.frag  cube.vert  fragment.frag  line.vert  player_cube.frag  player_cube.vert  vertex.vert
src/: Application.cpp  Camera.cpp  Main.cpp  ServerMain.cpp  VulkanRenderer.cpp  main.cpp
src/client/: BlockOutlineRenderer.cpp  Camera.cpp  ChunkMesh.cpp  ChunkRenderer.cpp  ClientMain.cpp  Console.cpp  CreativeMenu.cpp  DebugOverlay.cpp  HotbarUI.cpp  InputManager.cpp  Inventory.cpp  ItemRegistry.cpp  NetworkClient.cpp  PlayerCubeRenderer.cpp  Raycaster.cpp  TextureAtlas.cpp  VulkanEngine.cpp  VulkanRenderer.cpp
src/core/: Camera.cpp  InputManager.cpp  PerformanceMetrics.cpp  ResourceManager.cpp  ThreadPool.cpp
src/game/: Chunk.cpp  ChunkManager.cpp  ClientChunk.cpp  ClientChunkManager.cpp  GameClient.cpp  GameClientInput.cpp  GameClientNetwork.cpp  GameClientRenderer.cpp  GameClientUI.cpp  GameServer.cpp  SaveSystem.cpp
src/graphics/: TextureManager.cpp
src/network/: NetworkManager.cpp  NetworkProtocol.cpp
src/server/: GameServer.cpp  ServerMain.cpp  World.cpp
src/shared/: Chunk.cpp  ChunkSerializer.cpp
src/system/: UserDataManager.cpp
src/vulkan/: CubeGeometry.cpp  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanEngine.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanSwapchain.cpp
wiki/vulkan/: .gitkeep  project-overview.md
